[metadata]
name = ks_distributions
version = 1.2
url = https://github.com/kshitijjagatkar
author = Kshitij Jagatkar
author_email = kshitijjagatkar505@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Gaussian And Binomial Distributions
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6